- https://github.com/eclipse-sirius/sirius-web/issues/2504[#2504] [diagram] Create nodes at the cursor position when using create instance or drop tools.
- https://github.com/eclipse-sirius/sirius-web/issues/2444[#2444] [form] It is now possible to ignore widgets with invalid descriptions

== v2023.10.0

=== Shapes

- Add tool sections in the View DSL
- Add support for Precondition Expressions in Tools
- Color management in View
- Add support for image overlay
- Add the possibility to contribute custom palette tools

=== Architectural decision records

- [ADR-107] Add support for dynamic and conditional widgets in Forms
- [ADR-108] Improve the widget id computation
- [ADR-109] Add support for transient data in forms
- [ADR-110] Color Management in View

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/2250[#2250] [core] Remove all references to notistack from `sirius-components-core`.
As a result, the link between notistack and Sirius Components needs to be updated in applications using Sirius Components.
See the Sirius Web `ToastProvider` and `ToastContextInitializer` to see how to give Sirius Components the relevant function(s) from notistack.
Without the dependency to notistack in `sirius-components-core`, it will be easier to leverage native VS Code popup to display our errors.
- https://github.com/eclipse-sirius/sirius-web/issues/2259[#2259] [tree] [sirius-web] Move the `NewDocumentModal` and the `UploadDocumentModal` from `sirius-components-tree` to `sirius-web`.
We introduced the `TreeToolBarContribution` components to contribute actions to the `TreeToolBar` such as the `NewDocumentModal` and the `UploadDocumentModal`.
As a result, the `NewDocumentModal` and the `UploadDocumentModal` will not be available in applications.